added fixes to owl importer domain mapping